Add TensorFlow Lite support

--- a/app/src/main/res/drawable/animation.xml
+++ b/app/src/main/res/drawable/animation.xml
@@ -6,4 +6,7 @@
     <item
         android:drawable="@drawable/ic_processing_2"
         android:duration="400"/>
+    <item
+        android:drawable="@drawable/ic_processing_3"
+        android:duration="400"/>
 </animation-list>
